kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-det
  namespace: fraud-det
  labels:
    app: fraud-det
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fraud-det
  template:
    metadata:
      labels:
        app: fraud-det
    spec:
      containers:
      - name: fraud-det
        image: muraduiurie/fraud-det
        ports:
        - containerPort: 5555
          name: api
